Portfolioya yeni projeler eklendi

--- a/index.html
+++ b/index.html
@@ -761,6 +761,42 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://sphere-packing.vercel.app" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/web_development.jpeg" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Sphere Packing</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://tower-blocks-game.vercel.app" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/web_development.jpeg" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Tower Blocks Game</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://github.com/AhmetKoca32/Hospital-Appointment-System" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
