Yeni Projeler eklendi gerekli değişiklikler yapıldı

--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
           <h3>İlgi alanlarım ve uzmanlıklarım şunlardır:</h3>
           <ul>
             <p>
-            <li><strong>Java ile Android Geliştirme:</strong> Java becerilerimi sürekli olarak geliştiriyorum ve mobil uygulama projeleri üzerinde aktif olarak çalışıyorum, Android geliştirme konusundaki bilgimi genişletiyorum.</li>
+            <!-- <li><strong>Java ile Android Geliştirme:</strong> Java becerilerimi sürekli olarak geliştiriyorum ve mobil uygulama projeleri üzerinde aktif olarak çalışıyorum, Android geliştirme konusundaki bilgimi genişletiyorum.</li> -->
             <li><strong>Flutter ile Çapraz Platform Mobil Geliştirme:</strong> Farklı cihazlarda kesintisiz kullanıcı deneyimleri oluşturabilen çapraz platform mobil uygulamalar tasarlama deneyimim var.</li>
-            <li><strong>Unity ile Oyun Tasarımı:</strong> Çeşitli projeler aracılığıyla oyun geliştirme ve tasarımı konularında beceriler kazandım, bu alanın yaratıcı yönlerini keşfettim.</li>
+            <!-- <li><strong>Unity ile Oyun Tasarımı:</strong> Çeşitli projeler aracılığıyla oyun geliştirme ve tasarımı konularında beceriler kazandım, bu alanın yaratıcı yönlerini keşfettim.</li> -->
             <li><strong>HTML, CSS ve JavaScript ile Web Tasarımı:</strong> Web geliştirme projelerinde çalışarak duyarlı web siteleri oluşturma ve tasarlama konusundaki becerilerimi geliştirdim.</li>
             </p>
           </ul>
@@ -723,6 +723,77 @@
           </div>
 
           <ul class="project-list">
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/AhmetKoca32/To-Do-List-App" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/app_dev.jpeg" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">ToDo List</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/AhmetKoca32/Veresiye-Defteri" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/app_dev.jpeg" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Veresiye Defteri</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/tubitaksting" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/app_dev.jpeg" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">STİNG Tübitak Project</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://www.konwoy.com" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/app_dev.jpeg" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">KONWOY App</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://ahmetkocaportfolio.vercel.app/" target="_blank" rel="noopener noreferrer">
@@ -828,24 +899,6 @@
                 <h3 class="project-title">Library Management System</h3>
 
                 <p class="project-category">Web Development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://github.com/AhmetKoca32/To-Do-List-App" target="_blank" rel="noopener noreferrer">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/app_dev.jpeg" alt="dsm." loading="lazy">
-                </figure>
-
-                <h3 class="project-title">ToDo List</h3>
-
-                <p class="project-category">Applications</p>
 
               </a>
             </li>
