Updated contact email in index.html and added new experience entries for project management internship and co-founder role, along with skill percentages for Flutter Development, Dart Programming, Web Development, and English.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">kocaahmetkoca32@gmail.com</a>
+              <a href="mailto:kocaahmetkoca32@gmail.com" class="contact-link">kocaahmetkoca32@gmail.com</a>
             </div>
 
           </li>
@@ -566,99 +566,98 @@
             </div>
 
             <h3 class="h3">Experience</h3>
-</div>
+          </div>
 
-<ol class="timeline-list">
+          <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Proje Yönetimi Stajyeri</h4>    
+              <span>SCA Social</span>
+              <span>Nisan 2025 - Devam Ediyor</span>
+              <p class="timeline-text">
+                "Portfolyo Destekli Proje Yönetimi Staj Programı" kapsamında proje yönetimi, organizasyon yönetimi, yapay zeka, veri bilimi ve bilişim hukuku alanlarında deneyim kazanıyorum. Proje yönetimi departmanının tasarım ve planlama süreçlerine katkı sağlıyor, çok disiplinli projelerde aktif rol alıyorum. Uzaktan ve çok uluslu ekip çalışması deneyimi ediniyorum.
+              </p>
+            </li>
 
-  <li class="timeline-item">
-    <h4 class="h4 timeline-item-title">Sponsorship Coordinator</h4>    
-    <span>GDG on Campus SDÜ</span>
-    <span>2023 - Devam Ediyor</span>
-    <p class="timeline-text">
-      Kampüs etkinlikleri için sponsorluklar sağladım ve yönettim, sponsorlara güçlü ilişkiler
-      kurdum ve özel teklifler geliştirdim. Etkinliklerin sorunsuz bir şekilde gerçekleştirilmesini
-      sağlamak için tedarikçiler ve paydaşlarla koordinasyon sağladım. Etkinlik lojistiğini
-      yönettim, malzemelerin zamanında teslim edilmesini sağladım ve gelecekteki
-      sponsorlukları optimize etmek için performans verilerini analiz ettim.
-    </p>
-  </li>
-  <li class="timeline-item">
-    <h4 class="h4 timeline-item-title">Flutter Developer</h4>    
-    <span>Freelance</span>
-    <span>2023 - Devam Ediyor</span>
-    <p class="timeline-text">
-      Flutter ve Dart kullanarak çapraz platform mobil uygulamalar geliştirdim, kullanıcı dostu
-      ve yüksek performanslı çözümler sundum. Müşterilerle yakın çalışarak ihtiyaçlarını
-      anladım ve özel çözümler sundum. Uygulama işlevselliğini artırmak için API'leri ve
-      üçüncü taraf hizmetleri entegre ettim, iOS ve Android üzerinde sorunsuz deneyimler
-      sağladım. Ayrıca, uygulamaların kararlılığını, performansını sağlamak ve hatasız sürümler
-      sunmak için test ve hata ayıklama işlemleri gerçekleştirdim.
-    </p>
-  </li>
-  <li class="timeline-item">
-    <h4 class="h4 timeline-item-title">Web Developer (HTML,CSS,JavaScript,Spring Boot)</h4>    
-    <span>Freelance</span>
-    <span>2023 - 2024</span>
-    <p class="timeline-text">
-      HTML, CSS ve JavaScript kullanarak duyarlı web siteleri tasarladım ve veri depolama,
-      kullanıcı kimlik doğrulama ve API entegrasyonu için Spring Boot ile backend çözümleri
-      geliştirdim. Kod kalitesi, performans ve güvenlik için en iyi uygulamaları takip ederek
-      yüksek kaliteli ürünler sundum. Ayrıca, müşterilerle işbirliği yaparak gereksinimleri
-      belirledim ve dağıtım sonrası sürekli destek sağladım.  
-    </p>
-  </li>
-</ol>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Co-Founder & Flutter Developer</h4>    
+              <span>Konwoy</span>
+              <span>Şubat 2025 - Devam Ediyor</span>
+              <p class="timeline-text">
+                Erken aşama bir girişim olan Konwoy'da Co-Founder ve Flutter Developer olarak görev alıyorum. Mobil uygulamanın tüm geliştirme süreçlerinde Flutter ile aktif rol alıyor, ürün stratejisi ve kullanıcı deneyimi tasarımına katkı sağlıyorum. Modern teknolojileri kullanarak kullanıcıların günlük yaşamını kolaylaştıracak yenilikçi çözümler üretiyoruz.
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Bursiyer</h4>    
+              <span>Oyun ve Uygulama Akademisi</span>
+              <span>Kasım 2024 - Devam Ediyor</span>
+              <p class="timeline-text">
+                Yapay Zeka ve Teknoloji Akademisi'nin Yapay Zeka bölümünde makine öğrenimi, derin öğrenme ve yapay zeka algoritmaları üzerine eğitimler alıyorum. Python ile projeler geliştirerek yapay zeka alanında teknik yetkinliklerimi artırıyorum. FastAPI ile backend geliştirme, API tasarımı ve modern web teknolojilerini öğreniyorum.
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Sponsorship Coordinator</h4>    
+              <span>GDG on Campus SDÜ</span>
+              <span>Eylül 2024 - Devam Ediyor</span>
+              <p class="timeline-text">
+                Kampüs etkinlikleri için sponsorluklar sağlıyor ve yönetiyorum. Sponsorlara güçlü ilişkiler kuruyor, özel teklifler geliştiriyorum. Etkinliklerin sorunsuz gerçekleştirilmesi için tedarikçiler ve paydaşlarla koordinasyon sağlıyorum.
+              </p>
+            </li>
+          </ol>
+
+        </section>
 
 
-<section class="skill">
+        <section class="skill">
 
-  <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title">My skills</h3>
 
-  <ul class="skills-list content-card">
+          <ul class="skills-list content-card">
 
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Flutter Development</h5>
-        <data value="90">90%</data>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 90%;"></div>
-      </div>
-    </li>
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Flutter Development</h5>
+                <data value="90">90%</data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+            </li>
 
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Dart Programming</h5>
-        <data value="85">85%</data>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 85%;"></div>
-      </div>
-    </li>
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Dart Programming</h5>
+                <data value="85">85%</data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+            </li>
 
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Web Development</h5>
-        <data value="75">75%</data>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 75%;"></div>
-      </div>
-    </li>
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Web Development</h5>
+                <data value="75">75%</data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 75%;"></div>
+              </div>
+            </li>
 
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">English</h5>
-        <data value="70">70%</data>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 70%;"></div>
-      </div>
-    </li>
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">English</h5>
+                <data value="70">70%</data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+            </li>
 
-  </ul>
+          </ul>
 
-</section>
+        </section>
 
 
       </article>
