Updated project categories and descriptions in index.html to provide more specific details about each project, including new images and enhanced descriptions in Turkish for better clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
           </div>
 
           <ul class="project-list">
-            <li class="project-item active" data-filter-item data-category="applications">
+            <li class="project-item active" data-filter-item data-category="web development">
               <a href="https://github.com/AhmetKoca32/EcoTale" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
@@ -842,12 +842,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/web_development.jpeg" alt="finance" loading="lazy">
+                  <img src="./assets/images/dark_portfolio.jpg" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Personal Portfolio</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Animated personal portfolio example</p>
 
               </a>
             </li>
@@ -860,12 +860,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/web_development.jpeg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/portfolio.jpg" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Personal Portfolio 2</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Simple personal portfolio example</p>
 
               </a>
             </li>
@@ -878,12 +878,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/web_development.jpeg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/sphere.jpg" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Sphere Packing</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">WebGL teknolojisi kullanılarak geliştirilmiş interaktif bir 3D küre yerleştirme uygulaması. Modern tarayıcı özelliklerini kullanarak yüksek performanslı grafik render işlemleri gerçekleştirir. Dinamik arka plan renk değişimi ve responsive tasarım özellikleriyle kullanıcı dostu bir deneyim sunar.</p>
 
               </a>
             </li>
@@ -896,12 +896,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/web_development.jpeg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/tower.jpg" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Tower Blocks Game</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">WebGL teknolojisi ile geliştirilmiş interaktif bir blok kule oyunu. Kullanıcılar blokları üst üste yerleştirerek en yüksek kuleyi inşa etmeye çalışır. Yüksek performanslı grafik render işlemleri, dinamik arka plan değişimleri ve responsive tasarım özellikleriyle modern bir oyun deneyimi sunar.</p>
 
               </a>
             </li>
@@ -914,12 +914,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/web_development.jpeg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/Hospital.jpg" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Hospital Appointment System</h3>
 
-                <p class="project-category">Web Development</p>
+                <p class="project-category">Java Spring Boot ile geliştirilmiş kapsamlı bir hastane randevu yönetim sistemi. Doktor ve hasta profillerinin yönetimi, randevu planlaması ve idari görevler için güvenli ve kullanıcı dostu bir arayüz sunar. Rol tabanlı kimlik doğrulama sistemi ile doktorlar, hastalar ve yöneticiler için özelleştirilmiş erişim sağlar.</p>
 
               </a>
             </li>
@@ -932,12 +932,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/web_development.jpeg" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/Library.jpg" alt="brawlhalla" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Library Management System</h3>
 
-                <p class="project-category">Web Development</p>
+                <p class="project-category">Java Swing ile geliştirilmiş, MySQL veritabanı kullanan kapsamlı bir kütüphane yönetim sistemi. Kitap ekleme, güncelleme, silme ve arama işlemlerini kullanıcı dostu bir arayüz üzerinden gerçekleştirir. JDBC bağlantısı ile veritabanı entegrasyonu sağlayan, basit ve etkili bir çözüm sunar.</p>
 
               </a>
             </li>
