Added a visitor counter feature in index.html and updated project links, titles, and descriptions for improved clarity. Enhanced project visibility with a demo link for the Stayzi application and adjusted the Shoplytic project details accordingly.

--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
 
         </ul>
 
+        <div class="separator"></div>
+
+        <div class="visitor-counter" style="text-align: center; padding: 16px 0;">
+          <div style="display: flex; align-items: center; justify-content: center; gap: 8px; opacity: 0.7;">
+            <ion-icon name="eye-outline" style="font-size: 14px; color: #ffdb70;"></ion-icon>
+            <span style="font-size: 12px; color: #bbb; font-weight: 300;">
+              Ziyaretçi: <span id="visitor-count" style="color: #ffdb70; font-weight: 500;">-</span>
+            </span>
+          </div>
+        </div>
+
       </div>
 
     </aside>
@@ -754,24 +765,28 @@
 
           <ul class="project-list">
             <li class="project-item active" data-filter-item data-category="applications">
-              <a href="https://github.com/AhmetKoca32/BtkAkademi-Hackathon-2025" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/AhmetKoca32/Stayzi" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Shoplytic.jpg" alt="Shoplytic App" loading="lazy">
+                  <img src="./assets/images/Stayzi.jpg" alt="Stayzi App" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Shoplytic - AI Destekli Akıllı E-ticaret</h3>
+                <h3 class="project-title">Stayzi - Airbnb Benzeri Konaklama Platformu</h3>
 
-                <p class="project-category">BTK Akademi Hackathon 2025'te geliştirilen LangGraph, LangChain ve Flutter tabanlı AI agent sistemi. FastAPI backend, çoklu AI agent, zihin haritası oluşturma, fiyat karşılaştırması ve tüketici hakları desteği içeren kapsamlı e-ticaret çözümü.</p>
+                <p class="project-category">Flutter & FastAPI ile geliştirilmiş modern mobil konaklama platformu. PostgreSQL, Redis, RabbitMQ kullanılarak ev/oda kiralama ve ilan yönetimi sistemi. Material Design 3, harita entegrasyonu, ödeme sistemleri ile "Syntax Terror" ekip çalışması örneği.</p>
                 
                 <div style="margin-top: 8px; display: flex; gap: 12px; align-items: center;">
-                  <a href="https://www.linkedin.com/posts/ahmetkocaa_ai-flutter-python-activity-7367631975051853824-7H51" target="_blank" style="display: flex; align-items: center; gap: 4px; color: #ffdb70; text-decoration: none; font-size: 13px;">
+                  <a href="https://www.linkedin.com/posts/ahmetkocaa_flutter-fastapi-postgresql-activity-7367922497096212481-JnBg" target="_blank" style="display: flex; align-items: center; gap: 4px; color: #ffdb70; text-decoration: none; font-size: 13px;">
                     <ion-icon name="logo-linkedin" style="font-size: 16px;"></ion-icon>
                     <span>LinkedIn</span>
+                  </a>
+                  <a href="https://youtu.be/BRXBHr3zPQE?si=mGE7lDTZed6QVFhA" target="_blank" style="display: flex; align-items: center; gap: 4px; color: #ffdb70; text-decoration: none; font-size: 13px;">
+                    <ion-icon name="logo-youtube" style="font-size: 16px;"></ion-icon>
+                    <span>Demo</span>
                   </a>
                 </div>
 
@@ -808,28 +823,24 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="applications">
-              <a href="https://github.com/AhmetKoca32/Stayzi" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/AhmetKoca32/BtkAkademi-Hackathon-2025" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Stayzi.jpg" alt="Stayzi App" loading="lazy">
+                  <img src="./assets/images/Shoplytic.jpg" alt="Shoplytic App" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Stayzi - Airbnb Benzeri Konaklama Platformu</h3>
+                <h3 class="project-title">Shoplytic - AI Destekli Akıllı E-ticaret</h3>
 
-                <p class="project-category">Flutter & FastAPI ile geliştirilmiş modern mobil konaklama platformu. PostgreSQL, Redis, RabbitMQ kullanılarak ev/oda kiralama ve ilan yönetimi sistemi. Material Design 3, harita entegrasyonu, ödeme sistemleri ile "Syntax Terror" ekip çalışması örneği.</p>
+                <p class="project-category">BTK Akademi Hackathon 2025'te geliştirilen LangGraph, LangChain ve Flutter tabanlı AI agent sistemi. FastAPI backend, çoklu AI agent, zihin haritası oluşturma, fiyat karşılaştırması ve tüketici hakları desteği içeren kapsamlı e-ticaret çözümü.</p>
                 
                 <div style="margin-top: 8px; display: flex; gap: 12px; align-items: center;">
-                  <a href="https://www.linkedin.com/posts/ahmetkocaa_flutter-fastapi-postgresql-activity-7367922497096212481-JnBg" target="_blank" style="display: flex; align-items: center; gap: 4px; color: #ffdb70; text-decoration: none; font-size: 13px;">
+                  <a href="https://www.linkedin.com/posts/ahmetkocaa_ai-flutter-python-activity-7367631975051853824-7H51" target="_blank" style="display: flex; align-items: center; gap: 4px; color: #ffdb70; text-decoration: none; font-size: 13px;">
                     <ion-icon name="logo-linkedin" style="font-size: 16px;"></ion-icon>
                     <span>LinkedIn</span>
-                  </a>
-                  <a href="https://youtu.be/BRXBHr3zPQE?si=mGE7lDTZed6QVFhA" target="_blank" style="display: flex; align-items: center; gap: 4px; color: #ffdb70; text-decoration: none; font-size: 13px;">
-                    <ion-icon name="logo-youtube" style="font-size: 16px;"></ion-icon>
-                    <span>Demo</span>
                   </a>
                 </div>
 
