CV butonları ile pdf formatında indirme seçeneği eklendi

--- a/index.html
+++ b/index.html
@@ -551,6 +551,19 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
+        <p style="margin-bottom: 12px; color: #888; font-size: 15px;">Aşağıdan özgeçmişimi Türkçe veya İngilizce olarak PDF formatında indirebilirsiniz.</p>
+
+        <div style="display: flex; gap: 16px; margin-bottom: 32px; flex-wrap: wrap;">
+          <a href="assets/cv/CV-English.pdf" download class="cv-download-btn" style="display: inline-flex; align-items: center; gap: 8px; background: #ffdb70; color: #222; font-weight: 500; padding: 10px 20px; border-radius: 8px; text-decoration: none; box-shadow: 0 2px 8px rgba(0,0,0,0.04); transition: background 0.2s;">
+            <ion-icon name="cloud-download-outline" style="font-size: 18px;"></ion-icon>
+            English CV
+          </a>
+          <a href="assets/cv/CV-Turkish.pdf" download class="cv-download-btn" style="display: inline-flex; align-items: center; gap: 8px; background: #ffdb70; color: #222; font-weight: 500; padding: 10px 20px; border-radius: 8px; text-decoration: none; box-shadow: 0 2px 8px rgba(0,0,0,0.04); transition: background 0.2s;">
+            <ion-icon name="cloud-download-outline" style="font-size: 18px;"></ion-icon>
+            Türkçe CV
+          </a>
+        </div>
+
         <section class="timeline">
 
           <div class="title-wrapper">
