Updated favicon in index.html from ICO to PNG format and removed obsolete logo files (logo.ico and logo.svg) to streamline asset management.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="twitter:image" content="./assets/images/my-avatar.png">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
