Refactored visitor counter in index.html for improved layout and styling. Added CSS rules to position the counter in the sidebar without disrupting the overall design. Removed duplicate visitor counter section to streamline the code.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
           <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
         </button>
 
+        <div class="visitor-counter" style="padding: 16px 0;">
+          <div style="display: flex; align-items: center; justify-content: center; gap: 8px; opacity: 0.7;">
+            <ion-icon name="eye-outline" style="font-size: 14px; color: #ffdb70;"></ion-icon>
+            <span style="font-size: 12px; color: #bbb; font-weight: 300;">
+              Ziyaretçi: <span id="visitor-count" style="color: #ffdb70; font-weight: 500;">-</span>
+            </span>
+          </div>
+        </div>
+
       </div>
 
       <div class="sidebar-info_more">
@@ -161,15 +170,6 @@
         </ul>
 
         <div class="separator"></div>
-
-        <div class="visitor-counter" style="text-align: center; padding: 16px 0;">
-          <div style="display: flex; align-items: center; justify-content: center; gap: 8px; opacity: 0.7;">
-            <ion-icon name="eye-outline" style="font-size: 14px; color: #ffdb70;"></ion-icon>
-            <span style="font-size: 12px; color: #bbb; font-weight: 300;">
-              Ziyaretçi: <span id="visitor-count" style="color: #ffdb70; font-weight: 500;">-</span>
-            </span>
-          </div>
-        </div>
 
       </div>
 
