Added a new timeline item for the Yapay Zekâ Modülü - Veri Analizi Okulu, detailing participation in a program focused on machine learning and AI applications, coordinated by Marmara University and involving collaboration with leading Turkish universities.

--- a/index.html
+++ b/index.html
@@ -601,6 +601,15 @@
 
           <ol class="timeline-list">
             <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Yapay Zekâ Modülü - Veri Analizi Okulu (YÖK)</h4>
+              <span>Yükseköğretim Kurulu (Koordinasyon: Marmara Üniversitesi)</span>
+              <span>Ekim 2025 - Devam Ediyor</span>
+              <p class="timeline-text">
+                YÖK tarafından düzenlenen ve Türkiye'nin önde gelen üniversiteleri iş birliğiyle yürütülen Veri Analizi Okulu kapsamında Yapay Zekâ Modülüne kabul edildim. Bu programda makine öğrenmesi, üretken modeller ve çeşitli yapay zekâ uygulamaları üzerine hem teorik hem uygulamalı eğitimler almakta ve çok disiplinli projeler geliştirmekteyim. Program; Marmara Üniversitesi koordinasyonunda, ODTÜ, Boğaziçi Üniversitesi ve İTÜ’nün katkılarıyla yürütülmektedir.
+              </p>
+            </li>
+
+            <li class="timeline-item">
               <h4 class="h4 timeline-item-title">TÜBİTAK STING Projesi</h4>    
               <span>Süleyman Demirel Üniversitesi | PI: Dr. Utku KOSE | TÜBİTAK 1001 Projesi</span>
               <span>Şubat 2025 - Devam Ediyor</span>
